--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="Description" content="none">
   <meta name="Author" content="Karolis Pigaga">
   <title>Karolis Pigaga - a web designer</title>
-  <link rel="stylesheet" href="Karalito/css/styles.css">
+  <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="favico.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Montserrat+Alternates&family=Sacramento&display=swap" rel="stylesheet">
